--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                     <li onclick="scrollToSection('contact')">Contacto</li>
                 </ul>
                 <div class="hireMe__button pt-4">
-                    <a href="https://bit.ly/3KjkYr0" target="_blank" aria-label="Enviar mensaje al wsp"
+                    <a href="https://wa.link/nqbmrq" target="_blank" aria-label="Enviar mensaje al wsp"
                     class="cursor-pointer no-underline border-round-lg text-xl xl:text-sm">Contactarme</a>
                     <!--<a href="mailTo:rensochavezmore25@gmail.com" aria-label="Enviar mensaje al correo"
                         class="cursor-pointer no-underline border-round-lg text-xl xl:text-sm">Contratame</a>-->
@@ -102,7 +102,7 @@
                         </div>
                     </div>
                     <div class="hireMe__button pt-4">
-                        <a href="https://bit.ly/3KjkYr0" target="_blank" aria-label="Enviar mensaje al wsp"
+                        <a href="https://wa.link/nqbmrq" target="_blank" aria-label="Enviar mensaje al wsp"
                         class="cursor-pointer no-underline border-round-lg text-xl xl:text-sm">Contacto</a>
                     </div>
 
@@ -118,7 +118,7 @@
         <p class="text-sm">Tienes un proyecto en mente?</p>
         <h1 class="text-center">Estoy disponible como freelancer</h1>
         <div class="hireMe__button pt-4">
-            <a href="https://bit.ly/3KjkYr0" target="_blank" aria-label="Enviar mensaje al wsp"
+            <a href="https://wa.link/nqbmrq" target="_blank" aria-label="Enviar mensaje al wsp"
             class="cursor-pointer no-underline border-round-lg text-xl xl:text-sm">Escríbeme</a>    
         </div>
     </section>
@@ -351,7 +351,7 @@
                 <h3>Contacto</h3>
                 <div class="phone__number flex align-items-center gap-2">
                     <i class="fa-solid fa-phone"></i>
-                    <p>+51 992 934 278</p>
+                    <p>+51 968 782 763</p>
                 </div>
                 <div class="email flex align-items-center gap-2">
                     <i class="fa-solid fa-envelope"></i>
@@ -360,7 +360,7 @@
 
                 
 
-                <a href="https://bit.ly/3KjkYr0" target="_blank"
+                <a href="https://wa.link/nqbmrq" target="_blank"
                     class="cursor-pointer text-center col-4 sm:col-6 xl:col-4 mt-3 no-underline border-round-lg">
                     <span>
                         <i class="fa-solid fa-message"></i>
